k8s-yamls/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: abtesting
  annotations: 
    linkerd.io/inject: enabled
