k8s-yamls/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: abtesting
  annotations:
    linkerd.io/inject: enabled 
spec:
  selector:
    matchLabels:
      app: api
  replicas: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: tiagomac/abtesting-backend:1.0
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
