k8s-yamls/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: abtesting
  annotations:
    app.kubernetes.io/name: loadtester
    app.kubernetes.io/instance: flagger
  labels:
    app: api
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: api
